# rpg-game

./: .gitignore  CMakeLists.txt  design.txt  todo.txt
.github/workflows/: ci.yml
config/: keybinds.ini  window.ini
src/: Action.cpp  Action.h  AnimatedSprite.cpp  AnimatedSprite.h  AudioManager.cpp  Button.cpp  Button.h  Config.cpp  Config.h  Entity.cpp  Entity.h  EventHandler.h  Game.cpp  Game.h  Game_init.cpp  Level.cpp  Level.h  ResourceLoader.h  ResourceManager.h  SoundManager.h  State.cpp  State.h  init.cpp  main.cpp  test.cpp  utility.h
src/Action/: ActionAction.h  AnimationAction.h  CharIconAction.h  CharNameAction.h  CharNameFontAction.h  ColliderAction.h  FadeInAction.h  FadeOutAction.h  ImageAction.h  LevelAction.h  MoveAction.h  MoveCameraAction.h  MultipleAction.h  MusicAction.h  MusicPauseAction.h  MusicPlayAction.h  MusicStopAction.h  PositionAction.h  PositionCameraAction.h  SoundAction.cpp  SoundAction.h  TextAction.h  TextRateAction.h  TextSoundAction.h  TileAction.h  WaitAction.h  WaitInputAction.h
src/Common/: Action.h  LevelData.cpp  LevelData.h
src/Common/Action/: NoAction.h
src/Common/Data/: Action.cpp  Action.h  Entity.cpp  Entity.h  Level.cpp  Level.h
src/Component/: BulletComponent.h  DrawableComponent.cpp  DrawableComponent.h  MovementComponent.h  PlayerComponent.h  SoundComponent.h  SoundTrackerComponent.h
src/Core/: Config.cpp  ConnectionGuard.cpp  Logger.cpp  Logger.h  Signal.cpp  Signal.h  utility.h
src/Editor/: Editor.cpp  Editor.h  Grid.cpp  Grid.h  main.cpp
src/Entity/: Actor.h  Animated.cpp  Animated.h  Background.cpp  Background.h  Character.h  Collider.cpp  Collider.h  Drawable.cpp  Drawable.h  Interactible.cpp  Interactible.h  Movable.cpp  Movable.h  Player.cpp  Player.h  Prop.h  RectCollider.cpp  RectCollider.h  TestEntity.cpp  TestEntity.h  TileMap.cpp  TileMap.h  TileMapCollider.cpp  TileMapCollider.h  Trigger.cpp  Trigger.h
src/Manager/: Audio.cpp  Audio.h  Collider.cpp  Collider.h  Event.h  Interactible.cpp  Interactible.h  Resource.h  UI.cpp  UI.h
src/Resource/: AbstractSpriteSheet.h  SpriteSheet.h  TileSet.cpp  TileSet.h
src/State/: Game.cpp  Game.h  GameState.cpp  GameState.h  MainMenu.cpp  MainMenu.h  MainMenuState.cpp  MainMenuState.h
src/System/: BulletSystem.cpp  BulletSystem.h  EventHandlerSystem.cpp  EventHandlerSystem.h  MovementSystem.cpp  MovementSystem.h  PlayerSystem.cpp  PlayerSystem.h  RenderSystem.cpp  RenderSystem.h  SoundSystem.cpp  SoundSystem.h
src/UI/: Button.cpp  Button.h  Combo.cpp  Combo.h  Element.cpp  Element.h  Frame.cpp  Frame.h  Text.cpp  Text.h
